# FiGS-Standalone

./: .gitignore  .gitmodules  3dgs  DOCKER_SETUP.md  Dockerfile.FiGS  README.md  docker-compose.base.yml  docker-compose.yml  docker-figs.sh  install-serverside.sh  install.sh  pyproject.toml
notebooks/: figs_3dgs_oneliner.py  figs_capture_calibration.py  figs_examples_serverside.ipynb  figs_examples_serverside.py  figs_export_3dgs_example.py  figs_flightsim_example.py  figs_generate_3dgs_example.py  figs_simulate_flight_CLI.py  figs_simulate_flight_example.py
notes/: git_shenanigans.md
src/figs/: simulator.py
src/figs/control/: base_controller.py  vehicle_rate_mpc_mintimesnap.py
src/figs/dynamics/: external_forces.py  model_specifications.py
src/figs/perception/: __init__.py  vision_preprocess_clipseg.py  vision_processor_base.py
src/figs/render/: capture_calibration.py  capture_generation.py  gsplat_semantic.py  process_ns_data_capture_calibration.py  process_ns_data_extract_and_calibrate.py  process_ns_data_extract_frames.py
src/figs/scene_editing/: README.md  __init__.py  collision_checker.py  environment_bounds.py  obstacle_detector.py  scene_editing_utils.py
src/figs/synthesize/: README.md  __init__.py  loiter_generator.py  loiter_scheduler.py
src/figs/tsampling/: build_rrt_dataset.py
src/figs/tsplines/: min_time_snap.py
src/figs/utilities/: orientation_helper.py  polynomial_helper.py  trajectory_helper.py  transform_helper.py
src/figs/visualize/: generate_videos.py
src/scripts/: run_all_carine_3dgs.py  unwrap_captures.sh
