[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figs"
version = "0.1.0"
description = "Flying in Gaussian Splats"
authors = [{ name = "JunEn Low", email = "lowjunen@gmail.com" }, { name = "Maximilian Adang", email = "maximilian.adang@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy",
    "scipy",
    "qpsolvers",
    "albumentations",
    "imageio[ffmpeg]",
    "ninja",
    "gdown",
    "ipykernel",
    "ipympl",
    "matplotlib",
    "cython",
    ]

[tool.setuptools.packages.find]
where = ["src"]